--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,22 @@
+body {
+background-color: green;
+}
 
+h1{
+    color: yellow;
+}
+p{
+    color: yellow;
+}
+
+@media screen and (max-width:980px) {
+    body { background-color: blue;}
+    p{font-size: 14px;color: rgb(255, 255, 255);}
+    h1{font-size:none;color: rgb(255, 255, 255);}
+}
+
+@media screen and (max-width:600px) {
+    body { background-color: rgb(0, 0, 0);}
+    p{font-size: 14px;color: rgb(255, 255, 255);}
+    h1{font-size:none;color: rgb(255, 255, 255);}
+}
